--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="#"><img src="/img/1665332454749-removebg-preview.png" width="125px"></a>
+                    <a href="#"><img src="1665332454749-removebg-preview.png" width="125px"></a>
                     
                 </div>
                 <nav class="nav2">
@@ -35,7 +35,7 @@
                         <li><a href="#">Time Table</a></li>
                     </ul>
                 </nav>
-                <img src="/img/menu.png" class="menu-icon" onclick="menutoggle()">
+                <img src="menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
         </div>
     </div>
@@ -54,10 +54,9 @@
                 <img src="" class="offer-img">
             </div>
             <div class="col-2">
-                <p>Exclusively Available on 8teenStore</p><br>
-                <h1>Smart Band 4</h1><br>
-                <small>The Mi Smart Band 4 feature a 39.9% larger(than Mi Band 3) AMOLED color full-touch display with adjustable brightness, 
-                    so everything is clear as can be.</small><br>
+                <p></p><br>
+                <h1></h1><br>
+                <small></small><br>
              <a href="" class="btn">Buy Now &#8594;</a>
             </div>
         </div>
